gcc/testsuite/rust/rustc/ui/attributes/used_with_multi_args_dg.rs
#![feature(used_with_arg)]

#[used(compiler, linker)] // { dg-error "" "" { target *-*-* } }
static mut USED_COMPILER_LINKER: [usize; 1] = [0];

fn main() {}

